--- a/airlines-app/src/styles.css
+++ b/airlines-app/src/styles.css
@@ -1,1 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+.p-datatable-footer {
+  display: flex;
+}
+
+.p-datatable-footer p {
+    margin: 10px;
+}
