--- a/airlines-app/src/app/airlines-overview-module/airline-detail-dialog/airline-detail-dialog.component.html
+++ b/airlines-app/src/app/airlines-overview-module/airline-detail-dialog/airline-detail-dialog.component.html
@@ -19,7 +19,7 @@
   </div>
 
   <img 
-    [src]="this.airlineData['logoSrc']" 
+    [src]="this.airlineData.logoSrc" 
     [style]="{'width': '15%', 'float':'right', 'margin-top':'-75px' }"
   >
   </p-fieldset> 
@@ -32,7 +32,7 @@
       <label 
         class="p-col-fixed" 
         style="width:100px; margin-bottom: 25px;"
-      >{{this.airlineData.phone}}
+      >{{this.airlineData.contact.phone}}
       </label>
     </div>
 
