fixed filter for favorite airlines
get list of airlines and only after that filter out favorites

--- a/airlines-app/src/app/airlines-module/airlines-overview.component.html
+++ b/airlines-app/src/app/airlines-module/airlines-overview.component.html
@@ -73,7 +73,7 @@
       <p>Show only favorite airlines</p>
       <p-inputSwitch 
         [(ngModel)]="showFavorites" 
-        (onChange)="showFavoriteAirlines($event)" >
+        (onChange)="filterFavoriteData($event)" >
       </p-inputSwitch>
   </ng-template>
 
